# YoutubeAutoShutdown

./: .gitignore  README.md  manifest.json
.github/workflows/: deploy.yml
js/: youtube_auto_shutdown.js  youtube_auto_shutdown_background.js
native_app/: install_linux.sh  install_windows.bat  uninstall_linux.sh  uninstall_windows.bat
native_app/linux/: native_manifest.json
native_app/windows/: native_manifest.json
native_app_src/: CMakeLists.txt  MessagePassing.cpp  MessagePassing.h  ShutdownPc.h  main.cpp
native_app_src/Linux/: ShutdownPcLinux.cpp
native_app_src/Windows/: ShutdownPcWin32.cpp
popup/: youtube_auto_shutdown_popup.css  youtube_auto_shutdown_popup.html  youtube_auto_shutdown_popup.js
